SERVER-56560 Avoid thread scheduling deadlock in create collection coordinator