src/mongo/db/s/create_collection_coordinator.h
@@ -125,13 +125,6 @@ private:
      */
     void _finalize(OperationContext* opCtx) noexcept;
 
-    /**
-     * Executes _commit with an exponential backoff and retries if the commit failed due to a
-     * stepdown error.
-     */
-    ExecutorFuture<void> _commitWithRetries(std::shared_ptr<executor::ScopedTaskExecutor> executor,
-                                            const CancellationToken& token);
-
     CreateCollectionCoordinatorDocument _doc;
     const BSONObj _critSecReason;
 
